--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <canvas id="myCanvas" width="480" height="320"></canvas>
 
+<script type="text/javascript" src="./levelsAndBricks.js"></script>
 <script type="text/javascript" src="./theGame.js"></script>
 
 
