prepare for multiple pads and balls

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <script type="text/javascript" src="./levelsAndBricks.js"></script>
 <script type="text/javascript" src="./theGame.js"></script>
 
+<div style="text-align: center">
+    <input value="Нажми меня"  onclick="GameRestart();" type="button">
+</div>
+
 
 </body>
 </html>
